syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

package model;

option go_package = "github.com/axsh/openvdc/model";

message Console {
  enum Transport {
    SSH = 0;
  }
  Transport type = 1;
  string bind_addr = 2;
}

message ExecutorNode {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;

  Console console = 3;
  string grpc_addr = 4;
  NodeState last_state = 5;
}

message SchedulerNode {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message NodeState {
  enum State {
    REGISTERED = 0;
  }
  State state = 1;
  google.protobuf.Timestamp created_at = 2;
}
