syntax = "proto3";

package api;

service Instance {
	rpc Run (RunRequest) returns (RunReply){}
	rpc StopTask (StopTaskRequest) returns (StopTaskReply){}
}

message RunRequest{
	string imageName = 1;
	string hostName = 2;
	string taskType = 3;
}
message RunReply {
  string instance_id = 1;
}

message StopTaskRequest{
        string hostName = 1;
        string taskType = 2;
}
message StopTaskReply {
  string instance_id = 1;
}


service Resource {
  rpc Register(ResourceRequest) returns (ResourceReply){}
  rpc Unregister(ResourceIDRequest) returns (ResourceReply){}
}

message ResourceRequest {}
message ResourceReply {
  string ID = 1;
}

message ResourceIDRequest{
  oneof Key {
    string ID = 1;
    string Name = 2;
  }
}
